--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.13.3"
 dependencies = [
     "httpx>=0.28.1",
     "mcp>=1.9.2",
+    "requests>=2.32.4",
+    "sseclient>=0.0.27",
 ]
