--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.3"
 dependencies = [
+    "fastmcp>=2.8.1",
     "httpx>=0.28.1",
     "mcp>=1.9.2",
     "requests>=2.32.4",
